--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,3 +1,7 @@
+html {
+  height: 100vh;
+}
+
 .accordian {
   border: none;
   box-shadow: none;
@@ -5,4 +9,9 @@
 
 a {
   text-decoration: none;
+}
+
+.mainpage-container {
+  height: 100%;
+  color: white;
 }
