--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -15,6 +15,29 @@ a {
 }
 
 .mainpage-container {
-  height: 100%;
   color: white;
+}
+
+/* swiper */
+
+.swiper-button-next {
+  color: rgb(0, 0, 0) !important;
+}
+
+.swiper-button-prev {
+  color: rgb(0, 0, 0) !important;
+}
+
+.swiper-slide-image {
+  height: 30%;
+  object-fit: cover;
+  border-radius: 20px;
+}
+
+.swiper-slide {
+  /* Center slide text vertically */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  display: inherit !important;
 }
