--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -15,7 +15,8 @@ a {
 }
 
 .mainpage-container {
-  color: white;
+  display: grid;
+  grid-template-rows: 1fr 3fr 1fr;
 }
 
 /* swiper */
@@ -23,4 +24,8 @@ a {
 .image-slider {
   object-fit: cover;
   border-radius: 20px;
+}
+
+.swiper-img {
+  width: 100%;
 }
