--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -15,7 +15,10 @@ a {
 }
 
 .welcome {
-  margin-top: 100px;
+  margin-top: 70px;
+  height: 200px;
+  background-color: #0172af;
+  border-radius: 20px;
 }
 
 .mainpage-container {
@@ -28,10 +31,11 @@ a {
 .image-slider {
   border-radius: 20px;
   position: relative;
-  width: 800px;
+  width: 1200px;
   max-width: 100%;
   margin-left: auto;
   margin-right: auto;
+  margin-top: 80px;
 }
 
 .swiper-img {
@@ -40,4 +44,5 @@ a {
   height: auto;
   background-size: contain;
   background-image: cover;
+  border-radius: 20px;
 }
