--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -15,10 +15,15 @@ a {
 }
 
 .welcome {
-  margin-top: 70px;
-  height: 200px;
-  background-color: #0172af;
+  margin: 90px 20px 0px 20px;
+  height: 300px;
+  background-color: #7acaf6;
   border-radius: 20px;
+}
+
+.welcome-message {
+  font-size: 100px;
+  padding-left: 20px;
 }
 
 .mainpage-container {
@@ -29,9 +34,8 @@ a {
 /* swiper */
 
 .image-slider {
-  border-radius: 20px;
   position: relative;
-  width: 1200px;
+  width: 100%;
   max-width: 100%;
   margin-left: auto;
   margin-right: auto;
@@ -44,5 +48,10 @@ a {
   height: auto;
   background-size: contain;
   background-image: cover;
-  border-radius: 20px;
+}
+
+@media screen and (max-width: 601px) {
+  .image-slider {
+    width: 100%;
+  }
 }
