--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -28,7 +28,23 @@ a {
 
 .mainpage-container {
   display: grid;
-  grid-template-rows: 1fr 3fr 1fr;
+  grid-template-rows: 1fr 2fr 2fr;
+}
+
+.latest-container {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  width: 100%;
+}
+
+.latest-img-container {
+  display: flex;
+  justify-content: center;
+  margin: 10px;
+}
+
+.latest-img {
+  width: 100%;
 }
 
 /* swiper */
