--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -28,7 +28,7 @@ a {
 
 .mainpage-container {
   display: grid;
-  grid-template-rows: 1fr 2fr 2fr;
+  grid-template-rows: 2fr 4fr 0.5fr 5fr;
 }
 
 .latest-container {
@@ -40,7 +40,6 @@ a {
 .latest-img-container {
   display: flex;
   justify-content: center;
-  margin: 10px;
 }
 
 .latest-img {
