--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -17,7 +17,7 @@ a {
 .welcome {
   margin: 90px 20px 0px 20px;
   height: 300px;
-  background-color: #7acaf6;
+  background-color: #95cfef;
   border-radius: 20px;
 }
 
@@ -28,7 +28,8 @@ a {
 
 .mainpage-container {
   display: grid;
-  grid-template-rows: 2fr 4fr 0.5fr 5fr;
+  grid-template-rows: 0.5fr 0.5fr 0.2fr 1fr;
+  background-color: #dce6f6;
 }
 
 .latest-container {
@@ -40,10 +41,20 @@ a {
 .latest-img-container {
   display: flex;
   justify-content: center;
+  padding: 12px 12px 0px 12px;
 }
 
 .latest-img {
   width: 100%;
+  border-radius: 8px;
+}
+
+.latest-header {
+  text-align: center;
+  background-color: #f6a37c;
+  margin: 40px 20px 60px 20px;
+  height: 200px;
+  border-radius: 20px;
 }
 
 /* swiper */
