--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -117,6 +117,13 @@ a {
   width: 100%;
 }
 
+/* Basket */
+
+.basket-container {
+  color: white;
+  padding-top: 80px;
+}
+
 /* Store pages */
 
 @media screen and (max-width: 601px) {
