--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -31,7 +31,7 @@ a {
 .welcome {
   margin: 90px 20px 0px 20px;
   height: 300px;
-  background-color: #a836ea;
+  /* background-color: #a836ea; */
   border-radius: 20px;
 }
 
