--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,7 +1,7 @@
-@font-face {
+/* @font-face {
   font-family: "Futura";
   src: url("/public/fonts/Satoshi-Regular.woff");
-}
+} */
 
 html,
 body {
