--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -235,7 +235,7 @@ a {
 
 .basket-table {
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
   padding: 5px;
   text-align: center;
 }
