--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -71,11 +71,50 @@ a {
   display: flex;
   justify-content: center;
   padding: 12px 12px 0px 12px;
+  position: relative;
 }
 
 .latest-img {
   width: 100%;
   border-radius: 8px;
+  opacity: 1;
+  display: block;
+  width: 100%;
+  height: auto;
+  transition: 0.5s ease;
+  backface-visibility: hidden;
+  cursor: pointer;
+}
+
+.middle-text {
+  transition: 0.5s ease;
+  opacity: 0;
+  position: absolute;
+  top: 90%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  text-align: center;
+  background-color: #816df0;
+  border-radius: 50px;
+  padding: 10px;
+  cursor: pointer;
+  font-size: 10px;
+}
+
+.latest-img-container:hover .latest-image {
+  opacity: 0.3;
+}
+
+.latest-img-container:hover .middle-text {
+  opacity: 1;
+}
+
+.text {
+  background-color: #04aa6d;
+  color: white;
+  font-size: 16px;
+  padding: 16px 32px;
 }
 
 .latest-header {
@@ -224,7 +263,7 @@ a {
 .basket-header {
   display: flex;
   justify-content: center;
-  padding-bottom: 100px;
+  padding-bottom: 30px;
 }
 
 .basket-container {
