--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -90,12 +90,12 @@ a {
   transition: 0.5s ease;
   opacity: 0;
   position: absolute;
-  top: 90%;
+  top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
   -ms-transform: translate(-50%, -50%);
   text-align: center;
-  background-color: #816df0;
+  background-color: rgba(129, 109, 240, 0.9);
   border-radius: 50px;
   padding: 10px;
   cursor: pointer;
