Adjusted background color on main page

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -138,8 +138,8 @@ a {
 }
 
 .salomon-xt-link {
-  background-color: rgb(251, 213, 219);
-  color: rgb(91, 93, 96);
+  background-color: rgba(129, 109, 240, 0.9);
+  color: white;
   text-align: center;
   padding-top: 30px;
   font-size: 30px;
