--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -123,10 +123,10 @@ a {
   place-items: center;
   margin-left: auto;
   margin-right: auto;
-  margin-bottom: 80px;
+  margin-top: 50px;
+  margin-bottom: 50px;
   height: 100px;
   border-radius: 20px;
-
   font-size: 40px;
   text-align: center;
 }
@@ -134,7 +134,7 @@ a {
 .salomon-xt-container {
   display: grid;
   grid-template-columns: 2fr 1fr;
-  margin-top: 80px;
+  margin-top: 150px;
 }
 
 .salomon-xt-link {
@@ -160,7 +160,6 @@ a {
 }
 
 /* swiper */
-
 .image-slider {
   position: relative;
   width: 100%;
@@ -180,16 +179,34 @@ a {
 .swiper-buttons {
   display: flex;
   justify-content: space-between;
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  width: 100%;
   padding: 30px;
+}
+
+.back-arrow,
+.forward-arrow {
   cursor: pointer;
+}
+
+.back-arrow {
+  position: absolute;
+  left: 2%;
+}
+
+.forward-arrow {
+  position: absolute;
+  right: 2%;
 }
 
 .featured {
   font-size: 30px;
   display: flex;
   justify-content: center;
-  padding-bottom: 30px;
-  margin-top: 10px;
+  padding-bottom: 65px;
+  margin-top: 55px;
 }
 
 /* Home page */
