--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -173,7 +173,6 @@ a {
   max-width: 100%;
   margin-left: auto;
   margin-right: auto;
-
   object-fit: cover;
 }
 
@@ -187,7 +186,7 @@ a {
   display: flex;
   justify-content: space-between;
   position: absolute;
-  top: 50%;
+  top: 75%;
   transform: translateY(-50%);
   width: 100%;
   padding: 30px;
@@ -214,7 +213,9 @@ a {
   justify-content: center;
   padding-bottom: 65px;
   padding-top: 120px;
-  background-color: rgba(129, 109, 240, 0.9);
+  background-color: rgba(31, 126, 10, 0.8);
+  height: 700px;
+  margin-bottom: 100px;
 }
 
 /* Home page */
@@ -368,11 +369,11 @@ a {
   }
 
   .back-arrow {
-    margin-top: 40px;
+    margin-top: 140px;
   }
 
   .forward-arrow {
-    margin-top: 40px;
+    margin-top: 140px;
   }
 
   .latest-header {
