--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -115,36 +115,21 @@ a {
 }
 
 .latest-header {
-  margin-left: auto;
-  margin-right: auto;
-  margin-top: 50px;
-  margin-bottom: 50px;
+  margin: 50px auto;
   height: 100px;
   border-radius: 20px;
   font-size: 40px;
   text-align: center;
   background-color: rgba(160, 227, 204, 0.94);
-  padding: 20px 500px 10px 500px;
-
   border: 1px solid black;
+  width: 1000px;
+  padding-top: 15px;
 }
 
 .salomon-xt-container {
-  display: grid;
-  grid-template-columns: 2fr 1fr;
+  /* display: grid;
+  grid-template-columns: 2fr 1fr; */
   margin-top: 150px;
-}
-
-.salomon-xt-link {
-  color: rgba(129, 109, 240, 0.9);
-  background-color: black;
-  text-align: center;
-  padding-top: 30px;
-  font-size: 30px;
-}
-
-.salomon-xt-link:hover {
-  color: rgba(160, 227, 204, 0.94);
 }
 
 .salomon-xt-img {
@@ -374,16 +359,18 @@ a {
   }
 
   .latest-header {
-    font-size: 20px;
+    font-size: 15px;
     text-align: center;
-    margin: 10px;
+    margin-left: auto;
+    margin-right: auto;
     padding: 22px;
+    width: 200px;
   }
 
   .salomon-xt-container {
     display: flex;
     flex-direction: column;
-    margin-top: 60px;
+    margin-top: 0px;
   }
 
   .salomon-xt-link {
