--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,8 +1,3 @@
-/* @font-face {
-  font-family: "Futura";
-  src: url("/public/fonts/Satoshi-Regular.woff");
-} */
-
 body {
   padding: 0;
   margin: 0;
@@ -190,11 +185,11 @@ a {
 }
 
 .featured {
+  transition: background-color 1s ease-in-out;
   font-size: 30px;
   display: flex;
-  color: white;
+
   padding-top: 120px;
-  background-color: rgba(129, 109, 240, 0.7);
   height: 700px;
   padding: 600px 0px 0px 60px;
 }
