--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -56,6 +56,7 @@ a {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr;
   width: 100%;
+  padding-bottom: 80px;
 }
 
 .latest-img-container {
